# Staff_Management_System

./: .gitignore  CMakeLists.txt  README.md
include/: boss.h  employee.h  manager.h  staff.h  staffManager.h  stuff.h  stuffManager.h
src/: boss.cpp  employee.cpp  main.cpp  manager.cpp  staffManager.cpp  stuffManager.cpp
